labs/p3/week-24/starter/manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prediction-service
spec:
  selector: { app: prediction-service }
  ports:
    - name: http
      port: 80
      targetPort: http
